Set body display to grid, fixes scaling issue on small screens

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -7,13 +7,14 @@
     --container-pad: 1em;
 }
 
-/* DEFAULT */
-/* DEFAULT */
-/* DEFAULT */
+/* SMALL SCREENS */
+/* SMALL SCREENS */
+/* SMALL SCREENS */
 
 body {
-    grid-template-columns: 1fr;
-    grid-template-rows: 9fr;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr;
     grid-template-areas: 'nav'
                          'main';
     
@@ -22,18 +23,19 @@ body {
 
 /* navigation */
 
-#nav-links,
-li {
-    display: flex;
-}
-
 #nav {
     position: fixed;
     z-index: 1;
 
-    height: 10vh;
+    /* height: 10vh; */
+    height: 4em;
     width: 100%;
 }
+
+    #nav-links,
+    li {
+        display: flex;
+    }
 
     #nav-links {
         grid-area: nav;
@@ -61,7 +63,8 @@ main {
         min-height: 100vh;
         width: 100%;
 
-        padding: calc(10vh + 1em) 1em;
+        /* padding: calc(10vh + 1em) 1em; */
+        padding: calc(4em + 1em) 1em;
     }
 
     /* home page */
@@ -163,6 +166,10 @@ main {
                             gap: var(--container-gap);
                         }
 
+                        #topping-prices {
+                            width: max-content;
+                        }
+
                 #pizza-toppings {
                     grid-area: toppings;
 
@@ -229,6 +236,7 @@ main {
                     grid-area: container;
 
                     display: flex;
+                    flex-flow: column;
                     flex-wrap: wrap;
                     gap: var(--container-gap);
                 }
@@ -306,9 +314,3 @@ main {
             #phone {
                 grid-area: phone;
             }
-
-/* TABLET */
-/* TABLET */
-/* TABLET */
-
-/* @media only screen and (min-) */
